feat: make site description vague

--- a/public/dark-manifest.json
+++ b/public/dark-manifest.json
@@ -46,5 +46,5 @@
  ],
  "theme_color": "#000000",
  "background_color": "#000000",
- "description": "Find out what’s on your next test. If your teachers won’t tell you, THAVMA will."
+ "description": "CLOSED BETA - INVITE ONLY - DM @thavmaclub for access"
 }
