feat(public): replace favicon with donda cover

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -44,7 +44,7 @@
    "density": "4.0"
   }
  ],
- "theme_color": "#ffffff",
- "background_color": "#ffffff",
+ "theme_color": "#000000",
+ "background_color": "#000000",
  "description": "CLOSED BETA - INVITE ONLY - DM @thavmaclub for access"
 }
