--- a/package.json
+++ b/package.json
@@ -17,15 +17,16 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/thavmaclub/thavma.git"
+    "url": "git+https://github.com/t1v1/thavma.git"
   },
   "bugs": {
-    "url": "https://github.com/thavmaclub/thavma/issues"
+    "url": "https://github.com/t1v1/thavma/issues"
   },
   "dependencies": {
     "@segment/analytics.js-core": "^4.1.11",
     "@supabase/supabase-js": "^1.29.1",
     "classnames": "^2.3.1",
+    "cors": "^2.8.5",
     "dequal": "^2.0.2",
     "nanoid": "^3.1.30",
     "next": "^12.0.7",
@@ -33,6 +34,7 @@
     "phone": "^3.1.11",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "rfdc": "^1.3.0",
     "twilio": "^3.72.0",
     "winston": "^3.3.3"
   },
@@ -41,10 +43,12 @@
     "@istanbuljs/nyc-config-typescript": "^1.0.2",
     "@percy/cli": "^1.0.0-beta.71",
     "@percy/cypress": "^3.1.1",
+    "@types/cors": "^2",
     "@types/node": "^16.11.18",
     "@types/nprogress": "^0.2.0",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "@types/rfdc": "^1",
     "@types/source-map-support": "^0.5.4",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
