--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "@segment/analytics.js-core": "^4.1.11",
     "@supabase/supabase-js": "^1.29.1",
+    "await-to-js": "^3.0.0",
     "classnames": "^2.3.1",
     "cors": "^2.8.5",
     "dequal": "^2.0.2",
@@ -36,6 +37,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "rfdc": "^1.3.0",
+    "swr": "^1.2.0",
     "twilio": "^3.72.0",
     "winston": "^3.3.3"
   },
