--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -41,5 +41,10 @@
   "browser_action": {
     "default_icon": "icons/48.png",
     "default_title": "THAVMA"
+  },
+  "browser_specific_settings": {
+    "gecko": {
+      "update_url": "https://thavma.club/ext/updates.json"
+    }
   }
 }
