--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "rfdc": "^1.3.0",
+    "stripe": "^8.201.0",
     "swr": "^1.2.0",
     "twilio": "^3.73.1",
     "winston": "^3.5.0"
