--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
   },
   "dependencies": {
     "@segment/analytics.js-core": "^4.1.11",
+    "@stripe/stripe-js": "^1.22.0",
     "@supabase/supabase-js": "^1.29.4",
     "await-to-js": "^3.0.0",
     "classnames": "^2.3.1",
     "cors": "^2.8.5",
     "dequal": "^2.0.2",
+    "loglevel": "^1.8.0",
     "nanoid": "^3.2.0",
     "next": "^12.0.9",
     "nprogress": "^0.2.0",
@@ -39,8 +41,7 @@
     "rfdc": "^1.3.0",
     "stripe": "^8.201.0",
     "swr": "^1.2.0",
-    "twilio": "^3.73.1",
-    "winston": "^3.5.0"
+    "twilio": "^3.73.1"
   },
   "devDependencies": {
     "@cypress/code-coverage": "^3.9.12",
