deps: add `micro` to verify Stripe req signatures

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "classnames": "^2.3.1",
     "cors": "^2.8.5",
     "dequal": "^2.0.2",
+    "micro": "^9.3.4",
     "nanoid": "^3.2.0",
     "next": "^12.0.9",
     "nprogress": "^0.2.0",
@@ -48,6 +49,7 @@
     "@percy/cli": "^1.0.0-beta.74",
     "@percy/cypress": "^3.1.1",
     "@types/cors": "^2.8.12",
+    "@types/micro": "^7.3.6",
     "@types/node": "^16.11.21",
     "@types/nprogress": "^0.2.0",
     "@types/react": "^17.0.38",
