--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "private": true,
   "name": "thavma",
   "version": "0.0.2",
-  "author": "THAVMA <team@thavma.club>",
-  "homepage": "https://thavma.club",
+  "author": "THAVMA <team@thavma.io>",
+  "homepage": "https://thavma.io",
   "license": "AGPL-3.0",
   "scripts": {
     "dev": "next dev",
