--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build 
+name: Build
 
 on:
   push:
@@ -6,6 +6,9 @@ on:
 env:
   NODE_ENV: test
   SUPABASE_SERVICE_KEY: ${{ secrets.SUPABASE_SERVICE_KEY }}
+  STRIPE_PRICE_ID: ${{ secrets.STRIPE_PRICE_ID }}
+  STRIPE_KEY: ${{ secrets.STRIPE_KEY }}
+  STRIPE_WEBHOOK_SECRET: ${{ secrets.STRIPE_WEBHOOK_SECRET }}
   TWILIO_SID: ${{ secrets.TWILIO_SID }}
   TWILIO_TOKEN: ${{ secrets.TWILIO_TOKEN }}
   TWILIO_PHONE: ${{ secrets.TWILIO_PHONE }}
