feat: add paid subscription with Stripe (#5)
* deps: add Stripe Node.js SDK

* wip(model): add `cus` and `sub` user props

* fix(model): make `sub` optional for cancellations

* wip(join): redirect to `/api/auth` after login

* wip(api/auth): add Stripe setup auth endpoint

* feat(db): allow users to create empty profiles

* wip: replace `useAccess` with `useUser`

* refactor(app): don't destructure `query.code`

* wip(api): create Stripe customer and subscription

* refactor(context/user): make config optional

* perf(join): prefetch redirect destination

* refactor(context/user): use single-line ifs

* wip(pay): create payment page

* deps: replace `winston` with `loglevel`

* chore(env.development): add test Stripe key

* fix(components/join): position error absolutely

* refactor(components): break `TextField` into `Input`

* feat(api/logger): replace `winston` with `loglevel`

* feat(app): add `loglevel` debug logs

* feat(lib/fetch): add token auth header

* fix(index): uppercase `fetch` method

* refactor(api/auth): remove unused auth endpoint

* feat: add basic subscription payments with Stripe

* fix(pages/assessments): sort imports

* perf(lib/log): implement custom lightweight logger

* refactor(api/pay): rename `.tsx` to `.ts`

* fix(app): only redirect once `query` has loaded

* feat(context/user): add debug logging

* feat(lib/log): set log level based on `NODE_ENV`

* deps: add `micro` to verify Stripe req signatures

* feat(api/webhook): create Stripe webhook endpoint

Fixes TV-20

* fix(pay): polish script loading and page redirects

* refactor(api/pay): make `update` log debug level

* fix(index): show phone input if missing

* fix(theme): wait for `localStorage` to load

* fix(select): remove `border-color` transition

* wip(nav): create header nav bar

* fix(app): wait for theme before `localStorage.set()`

* feat(app): hide nav in `/join` and `/pay`

* fix(nav): remo

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,6 +6,9 @@ on:
 env:
   NODE_ENV: test
   SUPABASE_SERVICE_KEY: ${{ secrets.SUPABASE_SERVICE_KEY }}
+  STRIPE_PRICE_ID: ${{ secrets.STRIPE_PRICE_ID }}
+  STRIPE_KEY: ${{ secrets.STRIPE_KEY }}
+  STRIPE_WEBHOOK_SECRET: ${{ secrets.STRIPE_WEBHOOK_SECRET }}
   TWILIO_SID: ${{ secrets.TWILIO_SID }}
   TWILIO_TOKEN: ${{ secrets.TWILIO_TOKEN }}
   TWILIO_PHONE: ${{ secrets.TWILIO_PHONE }}
@@ -16,10 +19,6 @@ env:
 jobs:
   test:
     runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        browser: [firefox]
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
@@ -36,6 +35,7 @@ jobs:
       - run: yarn install --immutable
       - run: yarn build
       - run: yarn start & yarn wait-on http-get://localhost:3000
-      - run: yarn start:cy --record --parallel --headless --group ${{ matrix.browser }} -b ${{ matrix.browser }}
+      - run: yarn start:cy --record --parallel --headless --group firefox -b firefox
+      - run: yarn start:cy --record --parallel --headless --group chrome -b chrome
       - uses: codecov/codecov-action@v1
         if: ${{ success() || failure() }}
