--- a/package.json
+++ b/package.json
@@ -25,11 +25,12 @@
   },
   "dependencies": {
     "@segment/analytics.js-core": "^4.1.11",
+    "@stripe/stripe-js": "^1.22.0",
     "@supabase/supabase-js": "^1.29.4",
-    "await-to-js": "^3.0.0",
     "classnames": "^2.3.1",
     "cors": "^2.8.5",
     "dequal": "^2.0.2",
+    "micro": "^9.3.4",
     "nanoid": "^3.2.0",
     "next": "^12.0.9",
     "nprogress": "^0.2.0",
@@ -37,9 +38,9 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "rfdc": "^1.3.0",
+    "stripe": "^8.201.0",
     "swr": "^1.2.0",
-    "twilio": "^3.73.1",
-    "winston": "^3.5.0"
+    "twilio": "^3.73.1"
   },
   "devDependencies": {
     "@cypress/code-coverage": "^3.9.12",
@@ -47,6 +48,7 @@
     "@percy/cli": "^1.0.0-beta.74",
     "@percy/cypress": "^3.1.1",
     "@types/cors": "^2.8.12",
+    "@types/micro": "^7.3.6",
     "@types/node": "^16.11.21",
     "@types/nprogress": "^0.2.0",
     "@types/react": "^17.0.38",
@@ -55,7 +57,7 @@
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
     "babel-plugin-istanbul": "^6.1.1",
-    "cypress": "^9.3.1",
+    "cypress": "^9.4.1",
     "dotenv": "^10.0.0",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
