--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
   "name": "THAVMA",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "Firefox extension to hack Schoology Learnosity assessments.",
   "homepage_url": "https://thavma.io",
   "permissions": [
@@ -20,7 +20,7 @@
         "https://*.schoology.com/common-assessment-delivery/*",
         "http://localhost/schoology"
       ],
-      "js": ["content.js"],
+      "js": ["browser-polyfill.js", "content.js"],
       "css": ["style.css"],
       "all_frames": true
     },
@@ -31,12 +31,12 @@
         "https://thavma.io/assessments",
         "https://thavma.io/assessments?*"
       ],
-      "js": ["thavma.js"],
+      "js": ["browser-polyfill.js", "thavma.js"],
       "all_frames": true
     }
   ],
   "background": {
-    "scripts": ["background.js"]
+    "scripts": ["browser-polyfill.js", "background.js"]
   },
   "browser_action": {
     "default_icon": "icons/48.png",
